--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "bootstrap": "^4.0.0",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "4.0.1",
+    "reactstrap": "^5.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
