--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify/react": "^1.1.4",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
-    "bootstrap": "^4.0.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
+    "google-map-react": "^2.1.9",
+    "google-maps-react": "^2.0.6",
+    "jquery": "^3.5.1",
     "popper.js": "^1.12.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-to-print": "^2.12.4",
     "reactstrap": "^5.0.0",
+    "recharts": "^2.0.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -41,5 +49,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
