--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.1",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.6"
   },
   "proxy": "http://localhost:5000"
